--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <meta name="keywords" content="Guoxing Sun, ShanghaiTech University"> 
   <link rel="stylesheet" type="text/css" href="jemdoc.css">
   <link rel="icon" type="image/png" href="images/icon_cat.png">
+
+  <script async="" src="./analytics.js.下载"></script><script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-137722442-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
 </head>
 
 <body>
@@ -99,9 +110,13 @@ My research interests lie at the intersection of computer graphics and vision, i
     </div>
 </div> -->
 
+<!-- <div align="center">
+<a href="https://www.easycounter.com/">
+<img src="https://www.easycounter.com/counter.php?jacksun"
+border="0" alt="stats counter"></a>
+</div> -->
 
-
-
+<!-- <a href="https://clustrmaps.com/site/1bj7k"><img src="//www.clustrmaps.com/map_v2.png?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4&cl=ffffff"></a> -->
 
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
   <tbody><tr>
