--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@ border="0" alt="stats counter"></a>
 
 <!-- <a href="https://clustrmaps.com/site/1bj7k"><img src="//www.clustrmaps.com/map_v2.png?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4&cl=ffffff"></a> -->
 
+<script type="text/javascript" id="clstr_globe" src="./globe.js"></script>
+
+
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
   <tbody><tr>
     <td style="padding:0px">
