--- a/index.html
+++ b/index.html
@@ -107,11 +107,27 @@ My research interests lie at the intersection of computer graphics and vision, i
 <img src="https://www.easycounter.com/counter.php?jacksun"
 border="0" alt="stats counter"></a>
 </div> -->
+<br>
+<br>
+<br>
+<br>
 
 <!-- <a href="https://clustrmaps.com/site/1bj7k"><img src="//www.clustrmaps.com/map_v2.png?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4&cl=ffffff"></a> -->
+<div align="center">
+<div style="width:200px; height:200px;">
 
-<script type="text/javascript" id="clstr_globe" src="./globe.js"></script>
+  <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4"></script> -->
+<!-- <script type="text/javascript" id="clstr_globe" src="./globe.js"></script> -->
 
+<!-- <div class="clstrm_outer" style="width: 200px; height: 217px;"><a id="clstr_a" href="https://clustrmaps.com/site/1bj7k"> -->
+
+<!-- <a href="https://clustrmaps.com/site/1bj7k"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4&cl=ffffff" /></a> -->
+
+<script type="text/javascript" id="clustrmaps" src="./map_v2.js"></script><br>
+<a href="https://clustrmaps.com/site/1bj7k">Visit tracker</a>
+
+</div>
+</div>
 
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
   <tbody><tr>
