--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@ border="0" alt="stats counter"></a>
 
 <!-- <a href="https://clustrmaps.com/site/1bj7k"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4&cl=ffffff" /></a> -->
 
-<script type="text/javascript" id="clustrmaps" src="./map_v2.js"></script><br>
-<a href="https://clustrmaps.com/site/1bj7k">Visit tracker</a>
+<!-- <script type="text/javascript" id="clustrmaps" src="./map_v2.js"></script><br> -->
+<!-- <a href="https://clustrmaps.com/site/1bj7k">Visit tracker</a> -->
+<a href="https://clustrmaps.com/site/1bj7k" title="Visit tracker"><img src="https://clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=n&d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4" type="image/png" /></a>
 
 </div>
 </div>
