update paper link

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ My research interests lie at the intersection of computer graphics and vision, i
       <br>
       <em>ACM MM</em>, 2021
       <br>
-      Links coming soon
-
+      [<a href="https://arxiv.org/abs/2108.00362">Paper</a>]
     </td>
 </tr>
 </table>
@@ -113,8 +112,8 @@ border="0" alt="stats counter"></a>
 <br>
 
 <!-- <a href="https://clustrmaps.com/site/1bj7k"><img src="//www.clustrmaps.com/map_v2.png?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4&cl=ffffff"></a> -->
-<div align="center">
-<div style="width:200px; height:200px;">
+<!-- <div align="center"> -->
+<!-- /*<div style="width:200px; height:200px;">*/ -->
 
   <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4"></script> -->
 <!-- <script type="text/javascript" id="clstr_globe" src="./globe.js"></script> -->
@@ -125,10 +124,21 @@ border="0" alt="stats counter"></a>
 
 <!-- <script type="text/javascript" id="clustrmaps" src="./map_v2.js"></script><br> -->
 <!-- <a href="https://clustrmaps.com/site/1bj7k">Visit tracker</a> -->
-<a href="https://clustrmaps.com/site/1bj7k" title="Visit tracker"><img src="https://clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=n&d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4" type="image/png" /></a>
+<!-- <a href="https://clustrmaps.com/site/1bj7k" title="Visit tracker"><img src="https://clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=n&d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4" type="image/png" /></a> -->
 
-</div>
-</div>
+<!-- </div> -->
+<!-- </div> -->
+
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <tbody><tr>
+    <td style="padding:0px">
+      <br>
+      <p style="text-align:center;font-size:small;">
+          <a href="https://clustrmaps.com/site/1bj7k" title="Visit tracker"><img src="https://clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=n&d=oLcShlITEZkne-NlYX_5Mem68H-lHDo4NdfLkf1Jkr4" type="image/png" /></a>
+      </p>
+    </td>
+  </tr>
+</tbody></table>
 
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
   <tbody><tr>
