--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Guoxing Sun</title>
+  <title>Guoxing Sun😃孙国兴</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="Guoxing Sun, ShanghaiTech University"> 
@@ -18,7 +18,7 @@
     <tr>
       <td width="75%">
         <div id="toptitle">
-          <h1>Guoxing Sun</h1><h1>
+          <h1>Guoxing Sun 😃 孙国兴</h1><h1>
         </h1></div>
 
                 <h3>Master Student</h3>
