--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ I am a third year (2019-) Master student in Computer Science at <a href="https:/
 <!-- My research focuses on reconstruction and object pose estimation. -->
 </p>
 <p>
-My research interests lie at the intersection of computer graphics and vision, including performance capture, scene understanding, 3D/4D reconstruction and realistic rendering. I enjoy exploring new things and ideas to create magic effects and useful applications, especially to capture and understand the human-centric scenes in the complex real world.
+My research interests lie at the intersection of computer graphics and vision, including performance capture, scene understanding, 3D/4D reconstruction and realistic rendering. I enjoy exploring new things and ideas to create magic effects and useful applications in 3D vision, especially to capture and understand the human with scenes.
 </p>
 
 <p style="text-align:left">
@@ -73,7 +73,7 @@ My research interests lie at the intersection of computer graphics and vision, i
       <br>
       <strong>Guoxing Sun</strong>, Xin Chen, Yizhang Chen, Anqi Pang, Pei Lin, Yuheng Jiang, Lan Xu, Jingya Wang, Jingyi Yu.
       <br>
-      <em>ACM MM</em>, 2021
+      <em>ACM MM</em>, 2021 (Oral)
       <br>
       [<a href="https://arxiv.org/abs/2108.00362">Paper</a>]
     </td>
