--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ I am a third year (2019-) Master student in Computer Science at <a href="https:/
 <!-- My research focuses on reconstruction and object pose estimation. -->
 </p>
 <p>
-My research interests lie at the intersection of computer graphics and vision, including performance capture, scene understanding, 3D/4D reconstruction and realistic rendering. I enjoy exploring new things and ideas to create magic effects and useful applications in 3D vision, especially to capture and understand the human with scenes.
+My research interests lie at the intersection of computer graphics and vision, including performance capture, scene understanding, 3D/4D reconstruction and realistic rendering. I enjoy exploring new things and ideas to create magic effects and useful applications in 3D vision, especially to capture and understand human with scenes.
 </p>
 
 <p style="text-align:left">
