update comparsion video

--- a/HOI-FVV.html
+++ b/HOI-FVV.html
@@ -65,12 +65,13 @@
 				<div class="venue">(<a href="https://2021.acmmm.org/" target="_blank">ACM MM 2021 Oral</a>)</div>
 				<!-- <div class="venue">(Special issue in human pose, motion, activities, and shape in 3d)</div> -->
 			</div>
-			<div class="section teaser">
-				<iframe src="https://www.youtube.com/watch?v=wr-6wwt8RXk" allow="autoplay; encrypted-media" preload="" muted="" allowfullscreen="" width="600" height="352" frameborder="0"></iframe> 
-				<p style="font-size:11px; text-align:center">
-					(Placeholder) Download Video: <a href="https://www.youtube.com/watch?v=wr-6wwt8RXk" target="_blank">HD</a> (MP4, 59 MB)
-				</p>
-			</div>
+<!--			<div class="section teaser">-->
+<!--&lt;!&ndash;				<iframe src="https://www.youtube.com/watch?v=wr-6wwt8RXk" allow="autoplay; encrypted-media" preload="" muted="" allowfullscreen="" width="600" height="352" frameborder="0"></iframe> &ndash;&gt;-->
+<!--				<iframe style="clip-path: inset(1px 1px)" width="100%" height="100%" src="./Animatable Neural Radiance Fields for Human Body Modeling_files/eWOSWbmfJo4.html" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>-->
+<!--				<p style="font-size:11px; text-align:center">-->
+<!--					(Placeholder) Download Video: <a href="https://www.youtube.com/watch?v=wr-6wwt8RXk" target="_blank">HD</a> (MP4, 59 MB)-->
+<!--				</p>-->
+<!--			</div>-->
 
 			<div class="section abstract">
 				<h2>Teaser</h2>
@@ -94,14 +95,16 @@
 			<div class="section abstract">
 				<h2>Comparsion on novel view synthesis</h2>
 				<center>
-					<video height ="80%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
-						<source src="./projects/HOI-FVV/comparsion.mp4" type="video/mp4">
+					<video width ="85%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
+						<source src="./projects/HOI-FVV/compare.mp4" type="video/mp4">
 					</video>
-<!-- 			        <video width="80%"; playsinline="" autoplay="autoplay" loop="" preload="" muted="">
-				        <source src="projects/HOI-FVV/comparsion.mp4" type="video/mp4">
-			        	<source src="images/comparsion.mp4" type="video/mp4">
-			        </video> -->
 				</center>
+				<p align="center">
+					The comparsion methods are
+					<a href="https://www.youtube.com/watch?v=45g2Pxg7Ot4" target="_blank">[1]NHFVV</a>, &nbsp;
+					<a href="https://wuminye.com/NHR/" target="_blank">[2]NHR</a>, &nbsp;
+					<a href="https://www.matthewtancik.com/nerf" target="_blank">[3]NeRF</a>.
+				</p>
 			</div>
 <!-- 			<div class="Related works">
 				<h2>Acknowledgments</h2>
