update placeholder video

--- a/HOI-FVV.html
+++ b/HOI-FVV.html
@@ -47,7 +47,7 @@
 
 				<div class="authors">
 					<a href="https://sunshinnnn.github.io/" target="_blank">Guoxing Sun</a><sup>1</sup>&nbsp;&nbsp;
-					Xin Chen<sup>1,2</sup>&nbsp;&nbsp;
+					<a href="https://chenxin.tech/" target="_blank">Xin Chen</a><sup>1,2</sup>&nbsp;&nbsp;
 					Yizhang Chen<sup>1</sup>&nbsp;&nbsp;					
 					Anqi Pang<sup>1,2</sup>&nbsp;&nbsp;
 					Yuheng Jiang<sup>1</sup>&nbsp;&nbsp;
@@ -65,13 +65,12 @@
 				<div class="venue">(<a href="https://2021.acmmm.org/" target="_blank">ACM MM 2021 Oral</a>)</div>
 				<!-- <div class="venue">(Special issue in human pose, motion, activities, and shape in 3d)</div> -->
 			</div>
-<!--			<div class="section teaser">-->
-<!--&lt;!&ndash;				<iframe src="https://www.youtube.com/watch?v=wr-6wwt8RXk" allow="autoplay; encrypted-media" preload="" muted="" allowfullscreen="" width="600" height="352" frameborder="0"></iframe> &ndash;&gt;-->
-<!--				<iframe style="clip-path: inset(1px 1px)" width="100%" height="100%" src="./Animatable Neural Radiance Fields for Human Body Modeling_files/eWOSWbmfJo4.html" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>-->
-<!--				<p style="font-size:11px; text-align:center">-->
-<!--					(Placeholder) Download Video: <a href="https://www.youtube.com/watch?v=wr-6wwt8RXk" target="_blank">HD</a> (MP4, 59 MB)-->
-<!--				</p>-->
-<!--			</div>-->
+			<div class="section teaser">
+				<iframe width="560" height="315" src="./projects/HOI-FVV/placeholder.html" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+				<p style="font-size:11px; text-align:center">
+					(Placeholder)
+				</p>
+			</div>
 
 			<div class="section abstract">
 				<h2>Teaser</h2>
