update placeholder video

--- a/HOI-FVV.html
+++ b/HOI-FVV.html
@@ -166,7 +166,7 @@
 			<div class="section acknowledgments">
 				<h2>Acknowledgments</h2>
 				<p>
-					This work was supported by NSFC programs (61976138, 61977047), the National Key Research and Development Program (2018YFB2100500), STCSM (2015F0203-000-06), SHMEC (2019-01-07-00-01-E00003 ) and Shanghai YangFan Program (21YF1429500). We thank Yannan He and Han Liang for discussions and helps about human tracking.
+					This work was supported by NSFC programs (61976138, 61977047), the National Key Research and Development Program (2018YFB2100500), STCSM (2015F0203-000-06), SHMEC (2019-01-07-00-01-E00003 ) and Shanghai YangFan Program (21YF1429500). We thank <a href="https://hynann.github.io/" target="_blank">Yannan He</a> and Han Liang for discussions and helps about human tracking.
 				</p>
 			</div>
 
