update placeholder video

--- a/HOI-FVV.html
+++ b/HOI-FVV.html
@@ -66,7 +66,9 @@
 				<!-- <div class="venue">(Special issue in human pose, motion, activities, and shape in 3d)</div> -->
 			</div>
 			<div class="section teaser">
-				<iframe width="560" height="315" src="./projects/HOI-FVV/placeholder.html" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<!-- 				<iframe width="560" height="315" src="./projects/HOI-FVV/placeholder.html" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> -->
+<!-- 				<iframe class="video" src="./projects/HOI-FVV/placeholder.html" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> -->
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/T6gsbI35SH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<p style="font-size:11px; text-align:center">
 					(Placeholder)
 				</p>
