--- a/HOI-FVV.html
+++ b/HOI-FVV.html
@@ -68,7 +68,7 @@
 			<div class="section teaser">
 <!-- 				<iframe width="560" height="315" src="./projects/HOI-FVV/placeholder.html" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> -->
 <!-- 				<iframe class="video" src="./projects/HOI-FVV/placeholder.html" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> -->
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/T6gsbI35SH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/MPPABQORY2I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<p style="font-size:11px; text-align:center">
 					(Placeholder)
 				</p>
@@ -122,14 +122,14 @@
 						<div class="griditem">
 							<a href="https://arxiv.org/pdf/2108.00362.pdf" target="_blank" class="imageLink"><img src="./projects/HOI-FVV/pdf.png"></a><br>
 							Paper<br>
-							<a href="https://arxiv.org/pdf/2108.00362.pdf" target="_blank">PDF, 39 MB</a>
+							<a href="https://arxiv.org/pdf/2108.00362.pdf" target="_blank">13MB, PDF</a>
 						</div>
 					</li>
 					<li class="grid"> 
 						<div class="griditem"> 
-						<a href="https://www.youtube.com/watch?v=wr-6wwt8RXk" target="_blank" class="imageLink"><img src="./projects/HOI-FVV/mp4.png"></a><br>
+						<a href="https://www.youtube.com/embed/MPPABQORY2I" target="_blank" class="imageLink"><img src="./projects/HOI-FVV/mp4.png"></a><br>
 						Video<br> 
-						<a href="https://www.youtube.com/watch?v=wr-6wwt8RXk" target="_blank">MP4, 59 MB</a>
+						<a href="https://www.youtube.com/embed/MPPABQORY2I" target="_blank">471MB, MP4</a>
 						<br> 
 						</div>
 					</li>					
