--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
           <h1>Guoxing Sun 😃 孙国兴</h1><h1>
         </h1></div>
 
-                <h3>Master Student</h3>
+                <h3>Ph.D. Student</h3>
 
         <p>
-                    <a href="http://vic.shanghaitech.edu.cn/">Visual Intelligent Center (VIC)</a><br>
-                    School of Information Science and Technology<br>
-                    ShanghaiTech University<br>
+                    <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence (VCAI)</a><br>
+                    <a href="https://www.mpi-inf.mpg.de/home">Max Planck Institute for Informatics</a><br>
           <br>
-                    Email: sungx(at)shanghaitech.edu.cn <br>
+                    Email: gsun (α) mpi-inf [DOT] mpg [DOT] <img src="images/de.png" width="2.5%"><br>
+
+       <br>
         </p>
 
       </td>
       <td width="25%">
-        <img src="images/me.jpg" width="100%">
+        <img src="images/cat.jpg" width="90%">
       </td>
     </tr><tr>
   </tr></tbody>
@@ -42,37 +43,54 @@
 <h2>Short Bio</h2> 
 
 <p>
-I am a third year (2019-) Master student in Computer Science at <a href="https://www.shanghaitech.edu.cn/">ShanghaiTech University</a>, supervised by <a href="http://www.yu-jingyi.com/cv/">Prof. Jingyi Yu</a>. I also work closely with <a href="https://www.xu-lan.com/">Prof. Lan Xu</a>. I obtained my bachelor degree from <a href="https://www.neu.edu.cn/">Northeastern University</a> in 2019. 
-<!-- My research focuses on reconstruction and object pose estimation. -->
+I am a second year (2022-) <a href="https://ellis.eu/phd-postdoc">ELLIS</a> Ph.D. student at VCAI department of <a href="https://www.mpi-inf.mpg.de/home">Max Planck Institute for Informatics</a>, supervised by <a href="https://people.mpi-inf.mpg.de/~mhaberma/">Dr. Marc Habermann</a>, <a href="https://people.mpi-inf.mpg.de/~theobalt/">Prof. Dr. Christian Theobalt</a> and <a href="https://people.epfl.ch/pascal.fua/bio?lang=en">Prof. Dr. Pascal Fua</a>. I received my master degree in Computer Science from <a href="https://www.shanghaitech.edu.cn/">ShanghaiTech University</a> in 2022, where I worked with <a href="http://www.yu-jingyi.com/cv/">Prof. Jingyi Yu</a> and <a href="https://www.xu-lan.com/">Prof. Lan Xu</a>. Before that, I obtained my bachelor degree in Control Science and Engineering from <a href="https://www.neu.edu.cn/">Northeastern University</a> in 2019. 
 </p>
 <p>
-My research interests lie at the intersection of computer graphics and vision, including performance capture, scene understanding, 3D/4D reconstruction and realistic rendering. I enjoy exploring new things and ideas to create magic effects and useful applications in 3D vision, especially to capture and understand human with scenes.
+My research interests lie at the intersection of computer graphics and vision, including <strong>performance capture, human-Centric 3D scene understanding, 3D/4D reconstruction and neural rendering</strong>. I enjoy exploring new things and ideas to create magic effects and useful applications in 3D vision, especially to capture and understand human with scenes.
 </p>
 
 <p style="text-align:left">
 <a href="https://scholar.google.com/citations?hl=zh-CN&user=KmuZRxkAAAAJ">Google Scholar</a> &nbsp/&nbsp
 <a href="https://github.com/sunshinnnn">Github</a> &nbsp/&nbsp
-<a href="https://aideadlin.es/?sub=CV,ML,RO">Conference Timer</a>
+<a href="https://aideadlin.es/?sub=CV,ML,RO">Conference Timer</a> &nbsp/&nbsp
+<a href="https://people.mpi-inf.mpg.de/~gsun/"><font size="3" color="#f01120">New Personal Page in Department</font></a>
 </p>
 
 
-<h2>Publications</h2> 
+<h2>Selected Publications</h2> 
 
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
   <tr>
-    <td style="padding:20px;width:25%;vertical-align:middle">
+    <td style="padding:20px;width:35%;vertical-align:middle">
       <div class="one">
-        <!-- <img src='images/CAPE.png' width=200; height="auto"> -->
-        <!-- <img src='images/HOI-FVV.mp4' width=200; height="auto" class="img-fluid"> -->
-        <video width=200; playsinline="" autoplay="autoplay" loop="" preload="" muted="">
-        <source src="images/HOI-FVV.mp4" type="video/mp4">
+        <video width=300; playsinline="" autoplay="autoplay" loop="" preload="" muted="">
+        <source src="videos/2024-metacap.mp4" type="video/mp4">
         </video>
       </div>
     </td>
-    <td style="padding:20px;width:75%;vertical-align:middle">
+    <td style="padding:20px;width:65%;vertical-align:middle">
+      <font size="3" face="verdana" color="#1772d0">MetaCap: Meta-learning Priors from Multi-View Imagery for Sparse-view Human Performance Capture and Rendering</font>
+      <br>
+      <strong>Guoxing Sun</strong>, Rishabh Dabral, Pascal Fua, Christian Theobalt, Marc Habermann.
+      <br>
+      <em>ECCV</em>, 2024
+      <br>
+      [<a href="https://arxiv.org/abs/2403.18820">Paper</a>]
+      [<a href="https://vcai.mpi-inf.mpg.de/projects/MetaCap/">Project Page</a>]
+    </td>
+  </tr>
+  <tr>
+    <td style="padding:20px;width:35%;vertical-align:middle">
+      <div class="one">
+        <video width=300; playsinline="" autoplay="autoplay" loop="" preload="" muted="">
+        <source src="videos/2021-hoifvv.mp4" type="video/mp4">
+        </video>
+      </div>
+    </td>
+    <td style="padding:20px;width:65%;vertical-align:middle">
       <font size="3" face="verdana" color="#1772d0">Neural Free-Viewpoint Performance Rendering under Complex Human-object Interactions</font>
       <br>
-      <strong>Guoxing Sun</strong>, Xin Chen, Yizhang Chen, Anqi Pang, Pei Lin, Yuheng Jiang, Lan Xu, Jingya Wang, Jingyi Yu.
+      <strong>Guoxing Sun</strong>, Xin Chen, Yizhang Chen, Anqi Pang, Pei Lin, Yuheng Jiang, Lan Xu, Jingya Wang*, Jingyi Yu*.
       <br>
       <em>ACM MM</em>, 2021 (Oral)
       <br>
