--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>Short Bio</h2> 
 
 <p>
-I am a second year (2022-) <a href="https://ellis.eu/phd-postdoc">ELLIS</a> Ph.D. student at VCAI department of <a href="https://www.mpi-inf.mpg.de/home">Max Planck Institute for Informatics</a>, supervised by <a href="https://people.mpi-inf.mpg.de/~mhaberma/">Dr. Marc Habermann</a>, <a href="https://people.mpi-inf.mpg.de/~theobalt/">Prof. Dr. Christian Theobalt</a> and <a href="https://people.epfl.ch/pascal.fua/bio?lang=en">Prof. Dr. Pascal Fua</a>. I received my master degree in Computer Science from <a href="https://www.shanghaitech.edu.cn/">ShanghaiTech University</a> in 2022, where I worked with <a href="http://www.yu-jingyi.com/cv/">Prof. Jingyi Yu</a> and <a href="https://www.xu-lan.com/">Prof. Lan Xu</a>. Before that, I obtained my bachelor degree in Control Science and Engineering from <a href="https://www.neu.edu.cn/">Northeastern University</a> in 2019. 
+I am a third year (2022.11-) <a href="https://ellis.eu/phd-postdoc">ELLIS</a> Ph.D. student at VCAI department of <a href="https://www.mpi-inf.mpg.de/home">Max Planck Institute for Informatics</a>, supervised by <a href="https://people.mpi-inf.mpg.de/~mhaberma/">Dr. Marc Habermann</a>, <a href="https://people.mpi-inf.mpg.de/~theobalt/">Prof. Dr. Christian Theobalt</a> and <a href="https://people.epfl.ch/pascal.fua/bio?lang=en">Prof. Dr. Pascal Fua</a>. I received my master degree in Computer Science from <a href="https://www.shanghaitech.edu.cn/">ShanghaiTech University</a> in 2022, where I worked with <a href="http://www.yu-jingyi.com/cv/">Prof. Jingyi Yu</a> and <a href="https://www.xu-lan.com/">Prof. Lan Xu</a>. Before that, I obtained my bachelor degree in Control Science and Engineering from <a href="https://www.neu.edu.cn/">Northeastern University</a> in 2019. 
 </p>
 <p>
 My research interests lie at the intersection of computer graphics and vision, including <strong>performance capture, human-Centric 3D scene understanding, 3D/4D reconstruction and neural rendering</strong>. I enjoy exploring new things and ideas to create magic effects and useful applications in 3D vision, especially to capture and understand human with scenes.
@@ -60,6 +60,26 @@ My research interests lie at the intersection of computer graphics and vision, i
 <h2>Selected Publications</h2> 
 
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <tr>
+    <td style="padding:20px;width:35%;vertical-align:middle">
+      <div class="one">
+        <video width=300; playsinline="" autoplay="autoplay" loop="" preload="" muted="">
+        <source src="videos/2025-dut.mp4" type="video/mp4">
+        </video>
+      </div>
+    </td>
+    <td style="padding:20px;width:65%;vertical-align:middle">
+      <font size="3" face="verdana" color="#1772d0">Real-time Free-view Human Rendering from Sparse-view RGB Videos using Double Unprojected Textures</font>
+      <br>
+      <strong>Guoxing Sun</strong>, Rishabh Dabral, Heming Zhu, Pascal Fua, Christian Theobalt, Marc Habermann.
+      <br>
+      <em>CVPR</em>, 2025
+      <br>
+      [<a href="https://arxiv.org/abs/2412.13183">Paper</a>]
+      [<a href="https://vcai.mpi-inf.mpg.de/projects/DUT/">Project Page</a>]
+    </td>
+  </tr>
+  <tr>
   <tr>
     <td style="padding:20px;width:35%;vertical-align:middle">
       <div class="one">
