--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ My research interests lie at the intersection of computer graphics and vision, i
       <br>
       <strong>Guoxing Sun</strong>, Rishabh Dabral, Heming Zhu, Pascal Fua, Christian Theobalt, Marc Habermann.
       <br>
-      <em>CVPR</em>, 2025
+      <em>CVPR</em>, 2025 <a style='color:#eb0919;'>(Highlight)</a>
       <br>
       [<a href="https://arxiv.org/abs/2412.13183">Paper</a>]
       [<a href="https://vcai.mpi-inf.mpg.de/projects/DUT/">Project Page</a>]
@@ -112,7 +112,7 @@ My research interests lie at the intersection of computer graphics and vision, i
       <br>
       <strong>Guoxing Sun</strong>, Xin Chen, Yizhang Chen, Anqi Pang, Pei Lin, Yuheng Jiang, Lan Xu, Jingya Wang*, Jingyi Yu*.
       <br>
-      <em>ACM MM</em>, 2021 (Oral)
+      <em>ACM MM</em>, 2021 <a style='color:#eb0919;'>(Oral)</a>
       <br>
       [<a href="https://arxiv.org/abs/2108.00362">Paper</a>]
       [<a href="https://sunshinnnn.github.io/HOI-FVV">Project Page</a>]
