--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@ My research interests lie at the intersection of computer graphics and vision, i
     <td style="padding:20px;width:35%;vertical-align:middle">
       <div class="one">
         <video width=300; playsinline="" autoplay="autoplay" loop="" preload="" muted="">
+        <source src="videos/2025-eva.mp4" type="video/mp4">
+        </video>
+      </div>
+    </td>
+    <td style="padding:20px;width:65%;vertical-align:middle">
+      <font size="3" face="verdana" color="#1772d0">EVA: Expressive Virtual Avatars from Multi-view Videos</font>
+      <br>
+      Hendrik Junkawitsch, <strong>Guoxing Sun</strong>, Heming Zhu, Christian Theobalt, Marc Habermann.
+      <br>
+      <em>SIGGRAPH</em>, 2025, Conference Track
+      <br>
+      [<a href="https://arxiv.org/abs/2505.15385">Paper</a>]
+      [<a href="https://vcai.mpi-inf.mpg.de/projects/EVA/">Project Page</a>]
+    </td>
+  </tr>
+  <tr>
+  <tr>
+    <td style="padding:20px;width:35%;vertical-align:middle">
+      <div class="one">
+        <video width=300; playsinline="" autoplay="autoplay" loop="" preload="" muted="">
         <source src="videos/2025-dut.mp4" type="video/mp4">
         </video>
       </div>
