--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="icon" type="image/png" href="images/icon_cat.png">
 
   <meta name="google-site-verification" content="Lr9nXik2b8api4rpg55LgQzpJxfFSn0KzOonR_2K23Y" />
-
+  
 </head>
 
 <body>
   <table>
   <tbody>
     <tr>
-      <td width="75%">
+      <td width="70%">
         <div id="toptitle">
           <h1>Guoxing Sun 😃 孙国兴</h1><h1>
         </h1></div>
@@ -33,8 +33,8 @@
         </p>
 
       </td>
-      <td width="25%">
-        <img src="images/cat.jpg" width="90%">
+      <td width="30%">
+        <img src="images/me.png" width="90%">
       </td>
     </tr><tr>
   </tr></tbody>
@@ -55,6 +55,25 @@ My research interests lie at the intersection of computer graphics and vision, i
 <a href="https://aideadlin.es/?sub=CV,ML,RO">Conference Timer</a> &nbsp/&nbsp
 <a href="https://people.mpi-inf.mpg.de/~gsun/"><font size="3" color="#f01120">New Personal Page in Department</font></a>
 </p>
+
+
+
+<h2></h2>
+<strong>“形而上者谓之道，形而下者谓之器”</strong>
+<p>
+The Dao (Tao) refers to the underlying principles that transcend physical forms, while the Qi (here translated as "the vessel" or "the instrument") refers to the tangible manifestations of those principles.
+</p>
+
+<p>
+Dao (道): Underlying, metaphysical principles — the "why" behind things: values, laws, and fundamental order. <br>
+Qi  (器): Concrete, practical manifestations — the "what" and "how": instruments, practices, and physical objects shaped by the Dao.
+</p>
+
+<strong>How to do research and slove problems?</strong>
+<p>
+Real insight often emerges in the workshop of practice. As we wrestle with a specific, tangible problem, we may perceive a deeper pattern — a guiding Dao — beneath the surface. That discovery transforms how we face future challenges: rather than treating each problem as unique, we apply the revealed principle to anticipate consequences, design better interventions, and shape the outcomes of other, related issues.
+</p>
+
 
 
 <h2>Selected Publications</h2> 
